fix small issues with spacing on mobile

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -233,5 +233,6 @@
 
   .articleSection > a > .card {
     margin: 0 !important;
+    margin-bottom: 1rem !important;
   }
 }
